[package]
name = "rust_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
async-trait = "0.1.89"
derive_more = "2.1.1"
json = "0.12.4"
serde = { version = "1.0.228", features = ["derive"] }
surrealdb = "3.0.2"
uuid = "1.22.0"
validator = { version = "0.20.0", features = ["derive"] }
